syntax = "proto3";

package SCPDiscord.Interface;

message SyncRoleCommand
{
	uint64 ChannelID = 1;
	uint64 DiscordID = 2;
	string SteamIDOrIP = 3;
	string DiscordTag = 4;
}