syntax = "proto3";

import "BotToPlugin/ConsoleCommand.proto";
import "BotToPlugin/RoleResponse.proto";
import "BotToPlugin/SyncRoleCommand.proto";
import "BotToPlugin/UnsyncRoleCommand.proto";

import "PluginToBot/BotActivity.proto";
import "PluginToBot/ChannelTopic.proto";
import "PluginToBot/ChatMessage.proto";
import "PluginToBot/RoleQuery.proto";

package SCPDiscord.Interface;

message MessageWrapper
{
	oneof message {
		BotActivity botActivity = 1;
		ChannelTopic channelTopic = 2;
		ChatMessage chatMessage = 3;
		RoleQuery roleQuery = 4;
		SyncRoleCommand syncRoleCommand = 5;
		UnsyncRoleCommand unsyncRoleCommand = 6;
		ConsoleCommand consoleCommand = 7;
		RoleResponse roleResponse = 8;
	}
}